--- a/online_collaboration/app/components/admin/home.html
+++ b/online_collaboration/app/components/admin/home.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class=" container left-padding">
     <h3>you are in admin's home page.</h3>
-    {{message}}
+    {{message}}<br>
+    
 </div>
