--- a/online_collaboration/app/components/user/viewForumRequest.html
+++ b/online_collaboration/app/components/user/viewForumRequest.html
@@ -11,12 +11,12 @@
                     </div>
                     <div class="col s5">
                         <span class="blue-text text-darken-3"><b>{{request.username}}</b></span><br>
-                        <span class="blue-text text-darken-3">Name: {{request.firstName}} {{request.lastName}}</span>
+                        <span class="blue-text text-darken-3">Name: {{request.firstName}} {{request.lastName}}</span>,
                         <span class="blue-text text-darken-3">Role: {{request.role}}</span>
                     </div>
                     <div class="col s5">
-                        <a class="waves-effect waves-light col green darken-4 hoverable r-btn" ng-click="forumCommentCtrl.approveForumRequest()"><i class="material-icons r-icon">done</i></a>
-                        <a class="waves-effect waves-light col red accent-4 hoverable r-btn" ng-click="forumCommentCtrl.disapproveForumRequest()"><i class="material-icons r-icon">clear</i></a>
+                        <a class="waves-effect waves-light col green darken-4 hoverable r-btn" ng-click="forumCommentCtrl.approveForumRequest(request.userId)"><i class="material-icons r-icon">done</i></a>
+                        <a class="waves-effect waves-light col red accent-4 hoverable r-btn" ng-click="forumCommentCtrl.disapproveForumRequest(request.userId)"><i class="material-icons r-icon">clear</i></a>
                     </div>
                 </div>
             </div>
